--- a/SpringDataJpaTest/src/main/resources/application.yml
+++ b/SpringDataJpaTest/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    name: training
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver # 数据驱动
-    password: shen0720
+    password: xxx
     url: jdbc:mysql://localhost:3306/springboottest?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
   jpa:
     database: mysql # 数据库类型
